--- a/CSS/css.css
+++ b/CSS/css.css
@@ -1,4 +1,10 @@
-h2{
-    color:red;
-    font-size: 60 px;
+body{
+    line-height:2;
+    word-spacing:4;
+}
+h1{
+    font-size: 40px;
+}
+a{
+    text-decoration: none;
 }
